Need some kind of threading solution

--- a/CodeMageMeteor/badger/client/style.css
+++ b/CodeMageMeteor/badger/client/style.css
@@ -2,6 +2,11 @@ body {
     background-color: floralwhite;
 }
 
+#editor {
+    width: 100%;
+    height: 600px;
+}
+
 #badgedesigner {
     overflow: hidden;
     width: 100%;
